# Gilles-Style-Writing-Assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: accelerate_deepspeed.yaml  deepspeed_zero3.json  training_profiles.json
data/corpus/: priority_weights.json
docs/: API.md  CHEATSHEET.md  CLAUDE_CODE_PROMPT.md  DEPLOYMENT.md  FINETUNING.md  INSTALL.md  PROMPTS.md  QUICKSTART.md  SPEC.md  TASKS.md  TRAINING_GUIDE.md  TRAINING_GUIDE_CN.md  USER_GUIDE.md
scripts/: analyze_style.py  build_index.py  clean_training_data.py  compare_models.py  corpus_manager.py  evaluate_model.py  export_dpo_data.py  finetune_deepspeed.py  finetune_lora.py  finetune_mlx_mac.py  parse_corpus.py  plot_training.py  prepare_training_data.py  preprocess_training_data.py  run_routeB_after_A.sh  setup.sh  setup_ollama.sh  smart_finetune.py  smoke_test.py  start_vllm.sh  training_wizard.py  visualize_training.py
src/gswa/: __init__.py  config.py  main.py  train.py
src/gswa/api/: routes.py  schemas.py
src/gswa/services/: feedback.py  llm_client.py  model_registry.py  prompt.py  rewriter.py  similarity.py
src/gswa/training/: __init__.py  cli.py  cuda_trainer.py  hardware.py  logger.py  metrics_parser.py  planner.py  preprocessor.py  run_manager.py  visualizer.py
src/gswa/utils/: __init__.py  ai_detector.py  embedding.py  logging.py  (+2 more)
tests/: conftest.py  test_api.py  test_config.py  test_embedding.py  test_llm_client.py  test_ngram.py  test_prompt.py  test_schemas.py  test_similarity.py  test_training.py
web/: app.js  index.html  style.css
